@@ -35,6 +35,7 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 
 import javax.servlet.ServletException;
@@ -137,8 +138,8 @@ public class CMSPage extends Page implements ResourceHandler {
         final Class<PresentationManager> presenterClass = BebopConfig.getConfig().getPresenterClass();
         final PresentationManager pm;
         try {
-            pm = presenterClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException ex) {
+            pm = presenterClass.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException ex) {
             throw new RuntimeException(ex);
         }
 
